# auth-service

./: .env.development.local  .env.production.local  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: effb331c1c4e_initial.py
src/apps/: router.py  service.py
src/apps/account/: __init__.py  exceptions.py  router.py  service.py
src/apps/auth/: __init__.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/apps/otp/: __init__.py  exceptions.py  router.py  schemas.py  service.py
src/apps/shared/: exceptions.py  service.py
src/apps/telegram/: __init__.py  exceptions.py  router.py  service.py
src/core/: container.py  grpc_server.py  logger.py  main.py  utils.py
src/core/config/: __init__.py  dbConfig.py  grpcConfig.py  passportConfig.py  redisConfig.py  rmqConfig.py  rmqQueueConfig.py  settings.py  telegramConfig.py
src/core/db/: __init__.py  database.py  exceptions.py  service.py
src/core/db/models/: __init__.py  pending_contact_change.py  schemas.py  users.py  utils.py
src/core/grpc_client/: __init__.py  users.py
src/core/grpc_server/: account.py  auth.py  exceptions.py  grpc_server.py
src/core/prometheus/: __init__.py  prometheus.py  prometheus_metrics.py
src/core/rabbitmq/: __init__.py  connection.py  exceptions.py  publisher.py  service.py
src/core/redis_db/: __init__.py  database.py
