[project]
name = "auth-service"
version = "0.1.0"
description = ""

readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "kirt08-tokens (>=0.1.0,<0.2.0)",
    "aio-pika (>=9.5.8,<10.0.0)",
    "kirt08-contracts (>=0.2.0,<0.3.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "prometheus-client (>=0.24.1,<0.25.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"